development/virtualsvc.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blackhawks-facts
spec:
  gateways:
  - istio-system/gateway
  hosts:
  - 'blackhawks-facts-dev.n9oh.com'
  http:
  - route:
    - destination:
        host: blackhawks-facts-development.development.svc.cluster.local
        port:
          number: 80
